# rust-antimat

./: .env  Cargo.toml  Dockerfile  LICENSE  README-ru.md  README.md  bad_words.txt
src/: main.rs  utils.rs
