[package]
name = "rust-antimat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.8.3"
dotenv = "0.15"
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
